# TLogic

./: README.md  pyproject.toml  requirements.txt  unzip.py  yago2dataset.py
fiction/: description.py  gen_new_facts.py  query.py  utils.py
fiction/tlogic/: apply.py  evaluate.py  learn.py  rule_application.py  rule_learning.py
fiction/yagottl/: TsvUtils.py  TurtleUtils.py  schema.py
mycode/: apply.py  query.py  rule_application.py  temporal_walk.py  utils.py
mycode/yagottl/: TsvUtils.py  schema.py
