[project]
# Future trIples extracTION
name = "fiction"
version = "0.1.0"
description = ""
authors = [{ name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr" }]
requires-python = ">=3.9,<3.11"
dependencies = [
    "numpy>=1.21.4,<2",
    "joblib>=1.2.0,<2",
    "pandas>=1.3.4,<2",
    "notebook>=6.4.12,<7",
    "torch<1.13.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = []
