[project]
# Future trIples extracTION
name = "fiction"
version = "0.1.0"
description = ""
authors = [{ name = "Arthur Amalvy", email = "arthur.amalvy@univ-avignon.fr" }]
requires-python = ">=3.9,<3.11"
dependencies = [
    "bitsandbytes>=0.45.5",
    "joblib>=1.5.0",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "torch>=2.7.0",
    "transformers>=4.51.3",
]

[dependency-groups]
dev = []
